Melhorias no design. É necessário mudar cor dos cards e iniciar desenvolvimento para tablet e desktop

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -7,60 +7,99 @@
   border: none;
   color: #EEEEFF;
   font-family: 'Karla', sans-serif;
+  list-style: none;
 }
 
 // === Body ===
 body{
-  background: #99AABB;
+  background: #eeeeff;
 }
 
 // === main ===
 main{
-  background:#EEEEFF;
+  margin: 70px auto auto auto;
+  max-width: 320px;
+  height: 740px;
 }
-
+// === Section ===
+.section{
+  width: 280px;
+  margin: auto;
+  padding-top: 30px;
+}
 // === Header ===
 .header__conteiner{
+  width: 320px;
+  background: #fff;
+  border-radius: 5px 5px 0 0;
+  .section__header{
+    height: 270px;
   .header__titulo{
     color:#22BBAA;
+    font-size: 22px;
+    margin-bottom: 25px;
   }
   .header__subtitulo{
     color: #CCDD33;
+    font-size: 18px;
+    margin-bottom: 25px;
   }
   .header__paragrafo{
     color: #99AABB;
+    font-size: 15px;
+    line-height: 1.5;
+  }
   }
 }
 
 // === Card Plano ===
 .card--plano{
-
   background: #22bbbb;
+  width: 320px;
+  height: 220px;
   .card--plano__titulo{
     font-size: 20px;
   }
   .card--plano__subtitulo{
-
+    font-size: 32px;
   }
   .card--plano__subtitulo--info{
-
+    color: #77eedd;
+    font-size: 16px;
+    font-weight: 400;
+    margin-left: 5px;
   }
   .card--plano__paragrafo{
-
+    font-size: 18px;
+    margin: 10px auto 25px auto;
   }
   .card--plano__button{
+    width: 280px;
+    height: 50px;
+    font-size: 20px;
+    font-weight: 700;
+    border-radius: 5px;
     background: #CCDD33;
-
+    cursor: pointer;
   }
 }
 
 // === Card Info ===
 .card__info{
   background: #44bbbb;
+  height: 250px;
+  border-radius: 0 0 5px 5px;
   .card__info__titulo{
-
+    font-size: 20px;
+    margin-bottom: 15px;
   }
-  .card__info__paragrafo{
-
+  .card__info__lista{
+    font-size: 15px;
+    color: #a5eef4;
+    width: 200px;
+    li{
+      margin-bottom: 5px;
+      // background: red;
+    }
   }
 }
