--- a/styles/main.css
+++ b/styles/main.css
@@ -5,29 +5,78 @@
   background: none;
   border: none;
   color: #EEEEFF;
-  font-family: 'Karla', sans-serif; }
+  font-family: 'Karla', sans-serif;
+  list-style: none; }
 
 body {
-  background: #99AABB; }
+  background: #eeeeff; }
 
 main {
-  background: #EEEEFF; }
+  margin: 70px auto auto auto;
+  max-width: 320px;
+  height: 740px; }
 
-.header__conteiner .header__titulo {
-  color: #22BBAA; }
-.header__conteiner .header__subtitulo {
-  color: #CCDD33; }
-.header__conteiner .header__paragrafo {
-  color: #99AABB; }
+.section {
+  width: 280px;
+  margin: auto;
+  padding-top: 30px; }
+
+.header__conteiner {
+  width: 320px;
+  background: #fff;
+  border-radius: 5px 5px 0 0; }
+  .header__conteiner .section__header {
+    height: 270px; }
+    .header__conteiner .section__header .header__titulo {
+      color: #22BBAA;
+      font-size: 22px;
+      margin-bottom: 25px; }
+    .header__conteiner .section__header .header__subtitulo {
+      color: #CCDD33;
+      font-size: 18px;
+      margin-bottom: 25px; }
+    .header__conteiner .section__header .header__paragrafo {
+      color: #99AABB;
+      font-size: 15px;
+      line-height: 1.5; }
 
 .card--plano {
-  background: #22bbbb; }
+  background: #22bbbb;
+  width: 320px;
+  height: 220px; }
   .card--plano .card--plano__titulo {
     font-size: 20px; }
+  .card--plano .card--plano__subtitulo {
+    font-size: 32px; }
+  .card--plano .card--plano__subtitulo--info {
+    color: #77eedd;
+    font-size: 16px;
+    font-weight: 400;
+    margin-left: 5px; }
+  .card--plano .card--plano__paragrafo {
+    font-size: 18px;
+    margin: 10px auto 25px auto; }
   .card--plano .card--plano__button {
-    background: #CCDD33; }
+    width: 280px;
+    height: 50px;
+    font-size: 20px;
+    font-weight: 700;
+    border-radius: 5px;
+    background: #CCDD33;
+    cursor: pointer; }
 
 .card__info {
-  background: #44bbbb; }
+  background: #44bbbb;
+  height: 250px;
+  border-radius: 0 0 5px 5px; }
+  .card__info .card__info__titulo {
+    font-size: 20px;
+    margin-bottom: 15px; }
+  .card__info .card__info__lista {
+    font-size: 15px;
+    color: #a5eef4;
+    width: 200px; }
+    .card__info .card__info__lista li {
+      margin-bottom: 5px; }
 
 /*# sourceMappingURL=main.css.map */
